--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.0.0-beta-1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
