--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,14 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>3.0.0-beta-1</version>
         </dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<extensions>
