Get/Set profile & address apis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+log4j.logger.org.springframework=INFO 
