--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/washup
-spring.datasource.username=root
-spring.datasource.password=
-
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
-
-log4j.logger.org.springframework=INFO 
+spring.profiles.active=development
