--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
 		<maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
 		<os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
 		<protobuf.version>3.5.0</protobuf.version>
-		<protobuf-java-format.version>1.4</protobuf-java-format.version>
 		<jsonwebtoken-jwt>0.7.0</jsonwebtoken-jwt>
 
 		<flyway.version>4.2.0</flyway.version>
@@ -75,12 +74,6 @@
 			<groupId>kr.motd.maven</groupId>
 			<artifactId>os-maven-plugin</artifactId>
 			<version>1.5.0.Final</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.googlecode.protobuf-java-format</groupId>
-			<artifactId>protobuf-java-format</artifactId>
-			<version>${protobuf-java-format.version}</version>
 		</dependency>
 
 		<dependency>
@@ -127,7 +120,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
-            <version>3.0.0-beta-1</version>
+            <version>3.5.1</version>
         </dependency>
 
         <dependency>
