--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -2,6 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/washup
 spring.datasource.username=root
 spring.datasource.password=
+debug=true
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
