--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
 		<protobuf.version>3.5.0</protobuf.version>
 		<jsonwebtoken-jwt>0.7.0</jsonwebtoken-jwt>
+		<protobuf-java-format.version>1.4</protobuf-java-format.version>
 
 		<flyway.version>4.2.0</flyway.version>
 		<mysql.driver.version>5.1.13</mysql.driver.version>
@@ -85,6 +86,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode.protobuf-java-format</groupId>
+			<artifactId>protobuf-java-format</artifactId>
+			<version>${protobuf-java-format.version}</version>
 		</dependency>
 
 		<dependency>
