--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/washup
+spring.datasource.url=jdbc:mysql://localhost:3306/washup_development
 spring.datasource.username=root
 spring.datasource.password=
 debug=true
