Email - send grid integration

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -7,4 +7,5 @@ debug=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
-log4j.logger.org.springframework=INFO 
+log4j.logger.org.springframework=INFO
+sender_email_address=development@washup.io
