--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
             <version>2.9.9</version>
         </dependency>
 
+        <dependency>
+          <groupId>com.sendgrid</groupId>
+          <artifactId>sendgrid-java</artifactId>
+          <version>4.1.2</version>
+        </dependency>
     </dependencies>
 
 	<build>
