Add production properties

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 target/
 out/
 *.iml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
