hide 500 errors and hide error page

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -9,3 +9,5 @@ logging.level.org.hibernate=ERROR
 
 log4j.logger.org.springframework=INFO
 SENDER_EMAIL_ADDRESS=noreply@washup.io
+
+server.error.whitelabel.enabled=false
